New diagnostic message codes support